# tactile

./: .gitignore  grid.py  mpl_vis_ctrl_tool_slider_recorder.py  read heatmap.py  read_and_plot.py  read_with_btn.py  readme.md  tacdata_reader.py  tacdata_reader_binarize.py  tacdata_reader_binarize_cover_palm.py  tactile_activate_threshold.xls  test_threthold.py
connected_component/: CMakeLists.txt  connected_component  connected_component.cpp  connected_component.h  filter.cpp  filter.h  filters.cpp  main.cpp  outlier.cpp  outlier.h  seed_filling.cpp  tempCodeRunnerFile.cpp  test_connected_component  test_connected_component.cpp  two_pass.cpp
offline_process/: grid.py  read heatmap.py  read_and_plot.py  read_with_btn.py  tacdata_reader.py  tacdata_reader_binarize_cover.py
